Added Intro Paragraph

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <body>
    <h1>How to Play</h1>
-   <p>Intro and Instructions</p>
+   <p>Welcome to How to Play! Here's how it works... Type in an artist and/or a song, select your instrument, and hit that search button. 
+       The first set of results will be links to the sheet music for what you searched for. The second set of results will be links to 
+       YouTube videos that show how to play the songs on the instrument selected. An example is shown below.
+   </p>
 
    <form>
        <label for="artist-song">Artist and/or Song:</label>
