--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
 
+<!--Below are the background images for the different themes-->    
    <div>
    <img src="images/purple-guitar1.png" class="guitar-purple">
    <img src="images/blue-guitar1.png" class="guitar-blue">
@@ -64,8 +65,6 @@
    </section>
    </main>
     
-
-
     <script src="https://code.jquery.com/jquery-3.5.0.js" 
     integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" 
     crossorigin="anonymous"></script>
