Added Green Theme

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <img src="images/purple-guitar1.png" class="guitar-purple">
         <img src="images/blue-guitar1.png" class="guitar-blue">
         <img src="images/drums-red1.png" class="drums-red">
+        <img src="images/drums-green1.png" class="drums-green">
         <img src="images/guitar-neck.png" class="guitar-neck">
     </div>
 
