Decrease Quota Usage for each Search

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <form>
         <label for="artist-song">Artist and/or Song:</label>
-        <input type="text" name="artitst-song" id="artist-song" value="Candlebox Far Behind"><br>
+        <input type="text" name="artitst-song" id="artist-song" value="Candlebox Far Behind" required><br>
         
         <label for="instrument">Instrument:</label>
         <select name="instrument" id="instrument">
