updated README and screenshot

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <section class="intro-container">
         <h2>Welcome to How to Play! Here's how it works...</h2><br> 
         <p class="intro">Type in an artist and/or a song and hit that search button. 
-                         The first set of results will be links to the sheet music of what you searched for. 
+                         The first set of results will be links to the sheet music of what you searched for. After you click the link,
+                         you can choose which instrument you are playing, and the sheet music will change accordingly.
                          The second set of results will provide the lyrics to the song or songs related to your search.
                          An example is shown below.
         </p>
