fixed into and README screenshot

--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
 
     <section class="intro-container">
         <h2>Welcome to How to Play! Here's how it works...</h2><br> 
-        <p class="intro">Type in an artist and/or a song and hit that search button. 
-                         The first set of results will be links to the sheet music of what you searched for. After you click the link,
-                         you can choose which instrument you are playing, and the sheet music will change accordingly.
-                         The second set of results will provide the lyrics to the song or songs related to your search.
-                         An example is shown below.
+        <p class="intro">Type in an artist and/or a song, select and instrument, and smash that search button. 
+                         The 1st set of results will be links to the sheet music of what you searched for. The link 
+                         will take you to the sheet music on Songsterr.com. Here is where you can change the instrument, 
+                         and the notes will change accordingly. The 2nd set of results will provide the lyrics to the 
+                         song or songs related to your search. The 3rd set will be the video tutorials. These are links 
+                         to YouTube videos showing you how to play the song on the selected instrument. An example is 
+                         shown below. Rock on!!
         </p>
     </section>
 
